Fixed links and overlay overflow

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -302,6 +302,7 @@ section {
 	height: 100%;
 	background: rgb(2,0,36);
 	background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgba(0,0,0,0.2) 60%);
+	z-index: -1;
 }
 .ticket-button {
 	position: absolute;
